docs(swagger): activate user
